[package]
name = "add_getters_setters"
version = "0.1.4"
authors = ["Jordan Newman <jordankylenewman@gmail.com>"]
edition = "2018"

description = """
Makes it much easier to add getters and setters for fields of structures.
Done by simply just adding some attributes to the struct and fields
"""

keywords = ["getter", "setter", "macro", "tool"]
categories = ["development-tools::procedural-macro-helpers"]
repository = "https://github.com/coldFireworks/add_getters_setters"
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = { version = "1", default-features = false }
